<resources>
    <string name="app_name">Android Beacon Example</string>
    <string name="action_close">Exit</string>

    <string name="lbl_status">Status:</string>
    <string name="lbl_scanning">Scanning:</string>
    <string name="lbl_rawdata">Raw Data:</string>
    <string name="lbl_ibeaconprefix">iBeacon Prefix:</string>
    <string name="lbl_uuid">UUID:</string>
    <string name="lbl_majornumber">Major Number:</string>
    <string name="lbl_minornumber">Minor Number:</string>
    <string name="lbl_txpower">Tx Power:</string>
    <string name="lbl_rssi">RSSI:</string>


    <string name="txt_status_notfound">Beacon Not Found</string>
    <string name="txt_status_found">Beacon Found</string>

    <string name="txt_scanning_active">Active</string>
    <string name="txt_scanning_inactive">Inactive</string>

    <string name="btn_open_moodle">Open Moodle</string>
</resources>
